sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:2: error: Missing closing brace `}' assumed here
var a=false
^AlgBubbleSort1:2: error: expected class or object definition
var a=false
^AlgBubbleSort1:4: error: expected class or object definition
def echange() {
^