sort.basic.bubble.AlgBubbleSort1.scala.code
var a=false

def echange() {
  var lgr=getNombreValeurs()
  for(i<-0 to lgr-2) {
    if (plusPetit(i+1, i)) {
      echange(i+1, i)
      a=true
      
    } 
}



def bubbleSort()  {
  var lgr=getNombreValeurs()
  
  while (a==true) {
    echange()
  }
  
  }
  
  
